fix a jump

--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,8 @@
     @apply bg-background text-foreground;
   }
 }
+
+html,
+body {
+  overscroll-behavior: none;
+}
